more changes to template added in logo fixed up spacing. Also improved release page

--- a/public/css/releaseCapsules.css
+++ b/public/css/releaseCapsules.css
@@ -1,6 +1,11 @@
 @font-face {
-    font-family: 'Cv-regular';
+    font-family: 'CV-regular';
     src: url("fonts/CharlevoixPro-Regular.woff");
+}
+
+@font-face {
+    font-family: 'Unna-regular';
+    src: url("fonts/Unna-Regular.ttf");
 }
 
 
@@ -12,40 +17,53 @@
     /* template css */
     .page {
         display: grid;
-        grid-template-columns: 0.5fr 7fr 0.8fr 0.8fr 0.5fr 1em;
+        grid-template-columns: 1fr 7fr 0.8fr 0.8fr 0.5fr 1fr;
         grid-template-rows: 3em auto;
         grid-template-areas: "header header header header header header" ". content sidebar sidebar sidebar .";
         grid-column-gap: 1em;
-        grid-row-gap: 1em;
+        grid-row-gap: 2em;
         height: 100vh;
-        //background-color: #9a67a2;
     }
 
     .header{
         grid-area: header;
         display: grid;
-        grid-template-columns: 0.5fr 7fr 0.8fr 0.8fr 0.5fr;
+        grid-template-columns: 8fr 2em 3.1fr 2em;
         grid-template-rows: 1fr;
-        grid-template-areas: "logo logo user user user";
-        color: #ffffff;
+        grid-template-areas: "logo logo user user";
+        background-color: #9A67A2;
+        color: #fff;
+        align-items: center;
+        font-family: 'CV-regular';
     }
 
     .logo{
-        font-family: 'Cv-regular';
         grid-area: logo;
-        align-self: center;
         background-color: #9a67a2;
-        padding: 1em 7em;
+        display: grid;
+        grid-template-columns: 1fr 1em 0.4fr 6.6fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: ". . logoImage logoText";
+        align-items: center;
+
+    }
+
+    .logoImage{
+        grid-area: logoImage;
+    }
+
+    .logoText{
+        grid-area: logoText;
     }
 
     .user{
         grid-area: user;
         display: grid;
-        grid-template-columns: 0.7fr 3fr;
+        grid-template-columns: 0.5fr 3.2fr;
         grid-template-rows: 1fr;
         grid-template-areas: "image name";
         grid-column-gap: 0.5em;
-        align-self: center;
+        align-items: center;
         background-color: #9a67a2;
     }
     .userImage{
@@ -53,43 +71,33 @@
     }
 
     .userName{
-        font-family: 'Cv-regular';
         grid-area: name;
     }
 
 
     .sidebar{
-        font-family: 'Cv-regular';
+        font-family: 'CV-regular';
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(13, 1fr) auto;
         grid-row-gap: 0.5em;
         grid-area: sidebar;
-        color: #000!important;
-        background-color: #ffffff;
-        align-self: center;
+        color: #fff;
+        background-color: #fff;
+        align-items: center;
     }
 
     .sidebar *{
         padding-left: 0.5em;
-        background-color: #f1f1f1;
+        background-color: #c38ecb;
 
     }
-    /*
-    .sidebar *:hover{
-        background-color:red;
-    }*/
 
     .Account{
         grid-column: 1/2;
         grid-row: 1/2;
 
     }
-    /*
-    .sidebar *:hover{
-        background-color: #888888;
-    }
-    */
 
     .ReleaseCapsules{
         grid-column: 1/2;
@@ -106,8 +114,57 @@
     /* page specific css */
 
     .content{
-         grid-area: content;
+        font-family: "Unna-regular";
+        grid-area: content;
+        box-sizing: border-box;
+        padding: 0 1em;
      }
+
+    .message{
+        display: block;
+        padding-bottom: 2em;
+    }
+
+    #releaseForm{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-row-gap: 2em;
+        grid-column-gap: 1em;
+        grid-template-areas: "deceasedName datePassing" "submitRelease submitRelease";
+        align-items: center;
+
+    }
+
+    #releaseForm input, #releaseForm select{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        background-color: #c38ecb;
+        border-style: none;
+        color: #fff;
+        font-family: "CV-regular";
+    }
+
+    .deceasedName{
+        grid-area: deceasedName;
+    }
+
+    .datePassing{
+        grid-area: datePassing;
+    }
+
+    .submitRelease{
+        grid-area: submitRelease;
+        justify-self: center;
+    }
+
+
+
+
+
+
 }
 
 @media screen and (max-width: 992px) {
